--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "jotai-persist": "^0.0.0",
     "lucide-react": "^0.488.0",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-popper": "^2.3.0",
     "react-router-dom": "^7.5.0",
     "react-simplemde-editor": "^5.2.0",
     "remark-gfm": "^4.0.1",
@@ -43,8 +44,8 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.14.1",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
