--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "jotai-persist": "^0.0.0",
     "lucide-react": "^0.488.0",
     "postcss": "^8.5.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.21.0",
+    "react-i18next": "^15.7.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-popper": "^2.3.0",
