--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "pnpm --filter @tada/web dev",
     "dev:desktop": "pnpm --filter @tada/desktop tauri dev",
     "build": "pnpm --filter @tada/web build",
-    "build:desktop": "pnpm --filter @tada/desktop tauri build",
+    "build:desktop": "pnpm --filter @tada/desktop tauri build --verbose",
     "lint": "pnpm --filter \"./packages/**\" lint"
   },
   "keywords": [],
