--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,17 +19,12 @@ jobs:
             target: 'x86_64-apple-darwin'
           - platform: 'macos-latest'
             target: 'aarch64-apple-darwin'
-
           - platform: 'windows-latest'
             target: 'x86_64-pc-windows-msvc'
           - platform: 'windows-latest'
             target: 'aarch64-pc-windows-msvc'
-
           - platform: 'ubuntu-22.04'
             target: 'x86_64-unknown-linux-gnu'
-
-#          - platform: 'ubuntu-24.04-arm'
-#            target: 'aarch64-unknown-linux-gnu'
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -56,17 +51,32 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
+      - name: Install create-dmg (macOS)
+        if: runner.os == 'macOS'
+        run: brew install create-dmg
+
       - name: Install frontend dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build Tauri App and Create Release
-        uses: tauri-apps/tauri-action@v0
+      - name: Build App (Custom Script)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: pnpm build:desktop
+
+      - name: Upload Release Assets (macOS)
+        if: runner.os == 'macOS'
+        uses: softprops/action-gh-release@v1
         with:
-          tagName: ${{ github.ref_name }}
-          releaseName: 'Tada ${{ github.ref_name }}'
-          releaseBody: 'See the assets below for the latest version of the Tada desktop app.'
-          releaseDraft: false
-          prerelease: false
-          args: --target ${{ matrix.target }}
+          files: packages/desktop/src-tauri/target/release/bundle/dmg/*.dmg
+
+      - name: Upload Release Assets (Windows)
+        if: runner.os == 'Windows'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: packages/desktop/src-tauri/target/release/bundle/nsis/*.exe
+
+      - name: Upload Release Assets (Linux)
+        if: runner.os == 'Linux'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: packages/desktop/src-tauri/target/release/bundle/deb/*.deb
