--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "build:custom": "node scripts/build-desktop.js"
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.4",
